--- a/css/main.css
+++ b/css/main.css
@@ -73,3 +73,46 @@ body {
     color: white;
     font-size: 20px;
 }
+@media(max-width:767px) {
+    .textarea {
+        display: block;
+        margin-top: 50px;
+     
+    }
+    textarea{
+        width: 100% !important;
+        border: 1px solid #ddd !important;
+      margin: auto;
+
+    }
+.container {  
+    width:100%; 
+    height: 100vh; 
+    border-radius: 0;
+}
+.row {
+  border: none;
+    width: 100%;
+    margin: auto;
+}
+body{
+    width: 100%;
+    display: flex;
+    align-items: flex-start;
+    background-color: white;
+}
+#btn {
+    width: 100%;
+}
+.addicon{
+    display: flex;
+    justify-content: flex-start !important;
+    gap: 15px;
+}
+.icon{
+  
+    margin: auto;
+    display: flex;
+    gap: 20px;
+}
+}
